<resources>
    <string name="app_name">CrossRef</string>
    <string name="action_settings">Settings</string>

    <!-- Login Strings -->
    <string name="application_name">CrossRef</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="signup_text">Sign Up!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login_error_message">Username or password incorrect</string>
    <string name="login_error_title">Oops!</string>

    <!-- Register Strings -->
    <string name="register_title">Register!</string>
    <string name="confirm_password_field">Confirm password</string>
    <string name="password_register_hint">Enter password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_error_message">Please make sure your passwords match and all fields are filled in.</string>
    <string name="sign_up_error_parse">Unable to create user at this time.</string>
    <string name="update_user_error">Unable to update username.</string>
    <string name="sign_up_error_title">Oops!</string>

    <!-- Misc. -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_landing_page">LandingPageActivity</string>

    <!-- Book String Array-->
    <string-array name="books_bible">
        <item>Genesis</item>
        <item>Exodus</item>
        <item>Leviticus</item>
        <item>Numbers</item>
        <item>Deuteronomy</item>
        <item>Joshua</item>
        <item>Judges</item>
        <item>Ruth</item>
        <item>1 Samuel</item>
        <item>2 Samuel</item>
        <item>1 Kings</item>
        <item>2 Kings</item>
        <item>1 Chronicles</item>
        <item>2 Chronicles</item>
        <item>Ezra</item>
        <item>Nehemiah</item>
        <item>Esther</item>
        <item>Job</item>
        <item>Psalms</item>
        <item>Proverbs</item>
        <item>Ecclesiastes</item>
        <item>Song of Solomon</item>
        <item>Isaiah</item>
        <item>Jeremiah</item>
        <item>Lamentations</item>
        <item>Ezekiel</item>
        <item>Daniel</item>
        <item>Hosea</item>
        <item>Joel</item>
        <item>Amos</item>
        <item>Obadiah</item>
        <item>Jonah</item>
        <item>Micah</item>
        <item>Nahum</item>
        <item>Habakkuk</item>
        <item>Zephaniah</item>
        <item>Haggai</item>
        <item>Zechariah</item>
        <item>Malachi</item>
        <item>Matthew</item>
        <item>Mark</item>
        <item>Luke</item>
        <item>John</item>
        <item>Acts</item>
        <item>Romans</item>
        <item>1 Corinthians</item>
        <item>2 Corinthians</item>
        <item>Galatians</item>
        <item>Ephesians</item>
        <item>Philippians</item>
        <item>Colossians</item>
        <item>1 Thessalonians</item>
        <item>2 Thessalonians</item>
        <item>1 Timothy</item>
        <item>2 Timothy</item>
        <item>Titus</item>
        <item>Philemon</item>
        <item>Hebrews</item>
        <item>James</item>
        <item>1 Peter</item>
        <item>2 Peter</item>
        <item>1 John</item>
        <item>2 John</item>
        <item>3 John</item>
        <item>Jude</item>
        <item>Revelation</item>

    </string-array>
    <string name="title_activity_inbox">InboxActivity</string>

</resources>
